--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
         {% endblock %}
     </head>
     <body>
+        <img src="{{ asset('images/logo.png') }}" alt="Space inviters Logo">
         {% block body %}{% endblock %}
     </body>
 </html>
