--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,11 @@
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
+
+            <script type="module">
+                import alienGreeting from '{{ asset('lib/alien-greeting.js')}}';
+                alienGreeting('Give us all your canddy! ', false);
+            </script>
         {% endblock %}
     </head>
     <body>
