--- a/templates/planet/show.html.twig
+++ b/templates/planet/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="m-4 p-4 bg-gray-800 rounded-lg">
     <h1 class="text-xl font-semibold text-white mb-4">Planet</h1>
-
+    <turbo-frame id="planet-info">
     <table class="min-w-full bg-gray-800 text-white">
         <tbody class="bg-gray-700 divide-y divide-gray-600">
             <tr>
@@ -31,7 +31,16 @@
             </tr>
         </tbody>
     </table>
+    <div class="flex space-x-4 mt-4 hidden turbo-frame:block">
+        <a  href="{{ path('app_homepage') }}" class="inline-flex items-center px-2 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700">
+            Back
+        </a>
 
+        <a data-turbo-frame="_top" href="{{ path('app_planet_show', {'id': planet.id}) }}" class="inline-flex items-center px-2 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700">
+            Edit
+        </a>
+    </div>
+    </turbo-frame>
     <div class="flex space-x-4 mt-4">
         <a href="{{ path('app_planet_index') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700">
             Back to list
