--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -49,3 +49,13 @@
     .ts-wrapper .ts-dropdown {
         @apply shadow-md;
     }    
+
+    [data-popover-target=card]:after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 1rem;
+        border-width: 0.75rem;
+        /* border-top: 1px solid #3F5; */
+        @apply border-t-white dark:border-t-gray-900 border-transparent;
+    }
