--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -1,7 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Space Inviters!{% endblock %}
-
+{% macro sortArrow(sortName, sort, sortDirection) %}
+{% if sort == sortName %}
+{% if sortDirection == 'ASC' %}
+<svg xmlns="http://www.w3.org/2000/svg" class="inline-block w-4 h-4" width="24" height="24" viewBox="0 0 24 24"
+    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M6 15l6 -6l6 6"></path>
+</svg>
+{% else %}
+<svg xmlns="http://www.w3.org/2000/svg" class="inline-block w-4 h-4" width="24" height="24" viewBox="0 0 24 24"
+    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M6 9l6 6l6 -6"></path>
+</svg>
+{% endif %}
+{% else %}
+<!-- up and down arrow svg -->
+<svg xmlns="http://www.w3.org/2000/svg" class="inline-block w-4 h-4 text-slate-300" width="24" height="24"
+    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+    stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M8 9l4 -4l4 4"></path>
+    <path d="M16 15l-4 4l-4 -4"></path>
+</svg>
+{% endif %}
+{% endmacro %}
 {% block body %}
 <div class="flex">
     <aside class="hidden md:block md:w-64 bg-gray-900 px-2 py-6">
@@ -12,36 +37,43 @@
     </aside>
 
     <section class="flex-1 ml-10">
-            <form
-                method="GET"
-                action="{{ path('app_homepage') }}"
-                class="mb-6 flex justify-between"
-                data-controller="autosubmit"
-            >
-                <input
-                    type="search"
-                    name="query"
-                    value="{{ app.request.query.get('query') }}"
-                    aria-label="Search voyages"
-                    placeholder="Search voyages"
-                    class="w-1/3 px-4 py-2 rounded bg-gray-800 text-white placeholder-gray-400"
-                    data-action="autosubmit#debouncedSubmit"
-                    autofocus
-                >
+        <form method="GET" action="{{ path('app_homepage') }}" class="mb-6 flex justify-between"
+            data-controller="autosubmit">
+            <input type="search" name="query" value="{{ app.request.query.get('query') }}" aria-label="Search voyages"
+                placeholder="Search voyages" class="w-1/3 px-4 py-2 rounded bg-gray-800 text-white placeholder-gray-400"
+                data-action="autosubmit#debouncedSubmit" autofocus>
             <div class="whitespace-nowrap m-2 mr-4">{{ voyages|length }} results</div>
         </form>
         <div class="bg-gray-800 p-4 rounded">
             <table class="w-full text-white">
                 <thead>
                     <tr>
-                        <th class="text-left py-2">Name</th>
+                        <th class="text-left py-2">
+                            <a href="{{ path('app_homepage', {
+                                ...app.request.query.all(),
+                                sort: 'purpose',
+                                sortDirection: sort == 'purpose' and sortDirection == 'ASC' ? 'DESC' : 'ASC', 
+                                })}}">
+                                Purpose {{ _self.sortArrow('purpose', sort, sortDirection)}}
+                            </a>
+                        </th>
                         <th class="text-left py-2 pr-4">Planet</th>
-                        <th class="text-left py-2">Departing</th>
+                        <th class="text-left py-2">
+                            <a href="{{ path('app_homepage',{
+                                ...app.request.query.all(),
+                                sort: 'leaveAt',
+                                sortDirection: sort == 'leaveAt' and sortDirection == 'ASC' ? 'DESC' : 'ASC'
+                                })}}"
+                            >
+                            LeaveAt {{ _self.sortArrow('leaveAt', sort, sortDirection) }}
+                            </a>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for voyage in voyages %}
-                        <tr class="border-b border-gray-700 {% if loop.index is odd %} bg-gray-800 {% else %} bg-gray-700 {% endif %}">
+                    <tr
+                        class="border-b border-gray-700 {% if loop.index is odd %} bg-gray-800 {% else %} bg-gray-700 {% endif %}">
                         <td class="p-4">{{ voyage.purpose }}</td>
                         <td class="px-2 whitespace-nowrap">
                             <div data-controller="popover"
@@ -76,8 +108,17 @@
             </table>
         </div>
         <div class="flex items-center mt-6 space-x-4">
-            <a href="#" class="block py-2 px-4 bg-gray-700 text-white rounded hover:bg-gray-600">Previous</a>
-            <a href="#" class="block py-2 px-4 bg-gray-700 text-white rounded hover:bg-gray-600">Next</a>
+            {% if voyages.hasPreviousPage %}
+            <a href="{{ pagerfanta_page_url(voyages, voyages.previousPage)}}"
+                class="block py-2 px-4 bg-gray-700 text-white rounded hover:bg-gray-600">Previous</a>
+            {% endif %}
+            {% if voyages.hasNextPage %}
+            <a href="{{ pagerfanta_page_url(voyages, voyages.nextPage)}}"
+                class="block py-2 px-4 bg-gray-700 text-white rounded hover:bg-gray-600">Next</a>
+            {% endif %}
+            <div class="ml-4">
+                Page {{voyages.currentPage}}/{{voyages.nbPages}}
+            </div>
         </div>
     </section>
 </div>
