--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,5 +48,9 @@
                 </div>
             </footer>
         </div>
+
+        <div id="flash-container">
+            {{ include('_flashes.html.twig') }}
+        </div>
     </body>
 </html>
