Fancier Toaster: Auto-close & Fading

--- a/templates/_flashes.html.twig
+++ b/templates/_flashes.html.twig
@@ -4,6 +4,7 @@
         role="alert"
         data-turbo-temporary
         data-controller="closeable"
+        data-closeable-auto-close-value="5000"
     >
         <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200">
             <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -23,5 +24,10 @@
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
             </svg>
         </button>
+
+        <div
+            class="absolute bottom-0 left-0 h-1 bg-green-500 w-full transition-all duration-[5000ms] ease-linear"
+            data-closeable-target="timerbar"
+        ></div>
     </div>
 {% endfor %}
