--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -44,7 +44,9 @@
         placeholder="Search voyages" class="w-1/3 px-4 py-2 rounded bg-gray-800 text-white placeholder-gray-400"
         data-action="autosubmit#debouncedSubmit"
         autofocus>
-            <div class="whitespace-nowrap m-2 mr-4">{{ voyages|length }} results</div>
+        {% block result_count %}
+            <div id="voyage-result-count" class="whitespace-nowrap m-2 mr-4">{{ voyages|length }} results</div>
+        {% endblock %}
         </form>
         <turbo-frame id="voyage-list" data-turbo-action="advance">
             <div class="bg-gray-800 p-4 rounded">
@@ -122,6 +124,11 @@
                     Page {{voyages.currentPage}}/{{voyages.nbPages}}
                 </div>
             </div>
+            <turbo-stream action="replace" target="voyage-result-count">
+                <template>
+                    {{ block('result_count')}}
+                </template>
+            </turbo-stream>
 
         </turbo-frame>
     </section>
