--- a/templates/voyage/index.html.twig
+++ b/templates/voyage/index.html.twig
@@ -4,12 +4,13 @@
 
 {% block body %}
 <div class="m-4 p-4 bg-gray-800 rounded-lg">
-    <div class="flex justify-between" data-controller="modal" data-action="turbo:before-cache@window->modal#close">
+    <div class="flex justify-between">
 
         <h1 class="text-xl font-semibold text-white mb-4">Voyages</h1>
-        <button
+        <a
+            href="{{ path('app_voyage_new') }}"
+            data-turbo-frame="modal"
             class="flex items-center space-x-1 bg-blue-500 hover:bg-blue-700 text-white text-sm font-bold px-4 rounded"
-            data-action="modal#open"
             >
             <span>New Voyage</span>
             <svg xmlns="http://www.w3.org/2000/svg" class="w-4 inline" viewBox="0 0 24 24" stroke-width="2"
@@ -19,41 +20,7 @@
                 <path d="M9 12h6" />
                 <path d="M12 9v6" />
             </svg>
-        </button>
-        <dialog
-            data-modal-target="dialog"
-            data-action="close->modal#close click->modal#clickOutside"
-            class="open:flex bg-gray-800 rounded-lg shadow-xl inset-0 w-full md:w-fit md:max-w-[50%] md:min-w-[50%] backdrop:bg-slate-600 backdrop:bg-opacity-80 backdrop:backdrop-blur-sm animate-fade-in">
-            <div class="flex grow p-5">
-                <div class="grow overflow-auto p-1">
-                    <div class="text-white space-y-4">
-                        <div class="flex justify-between items-center">
-                            <h2 class="text-xl font-bold">Create new Voyage</h2>
-                            <form method="dialog">
-                                <button class="text-lg absolute top-5 right-5">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 inline" viewBox="0 0 24 24"
-                                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round">
-                                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                        <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
-                                        <path d="M9 12h6" />
-                                        <path d="M12 9v6" />
-                                    </svg> </button>
-                            </form> 
-                        </div>
-                        <p class="text-gray-400">
-                            Join us on an exciting journey through the cosmos! Discover the
-                            mysteries of the universe and explore distant galaxies.
-                        </p>
-                        <div class="flex justify-end">
-                            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                                Let's Go!
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </dialog>
+        </a>
     </div>
     <table class="min-w-full bg-gray-800 text-white">
         <thead class="border-b border-gray-700">
